kubernetes/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: autocura-cognitiva
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoramento
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
  - name: http
    port: 3000
    targetPort: http
